<resources>
    <string name="app_name">RadioButton_HW</string>
    <string name="title">Я историк</string>
    <string name="start">Начать</string>
    <string name="score">Баллы: %1$d</string>
    <string name="next">Продолжить</string>
    <string name="select_answer">Выберите ответ</string>

    <string name="question1">Как звали первого царя всея Руси?</string>
    <string name="ans1Q1">А) Иван Грозный</string>
    <string name="ans2Q1">Б) Петр I</string>
    <string name="ans3Q1">В) Александр Невский</string>

    <string name="question2">В каком году началась Великая Отечественная война?</string>
    <string name="ans1Q2">А) 1914</string>
    <string name="ans2Q2">Б) 1941</string>
    <string name="ans3Q2">В) 1939</string>

    <string name="question3">Кто из этих правителей отменил крепостное право в России?</string>
    <string name="ans1Q3">А) Николай II</string>
    <string name="ans2Q3">Б) Александр II</string>
    <string name="ans3Q3">В) Екатерина II</string>

    <string name="question4">Как называлась столица Древней Руси до Москвы?</string>
    <string name="ans1Q4">А) Санкт-Петербург</string>
    <string name="ans2Q4">Б) Киев</string>
    <string name="ans3Q4">В) Новгород</string>

    <string name="question5">Кто возглавил СССР во время Великой Отечественной войны?</string>
    <string name="ans1Q5">А) Иосиф Сталин</string>
    <string name="ans2Q5">Б) Владимир Ленин</string>
    <string name="ans3Q5">В) Никита Хрущев</string>

    <string name="scored">Вы набрали %1$d баллов</string>

    <string name="subzero"><b>"Любитель новых знаний"</b>\n Похоже, история Отечества для вас пока
        неизведанная область, но это лишь повод начать увлекательное путешествие в прошлое!
        Вы любите учиться и открывать новое — впереди вас ждут великие открытия. Не сдавайтесь,
        читайте, исследуйте, и вскоре вы станете настоящим знатоком!</string>

    <string name="newbie">"Новичок с потенциалом"\n Вы уже знакомы с основными моментами
        отечественной истории, но есть еще много интересного, что предстоит узнать.
        Ваши знания — это хороший старт, а желание разобраться в исторических событиях — залог
        дальнейших успехов. Продолжайте углубляться в изучение, и вы обязательно добьетесь
        успехов!</string>

    <string name="good">"Уверенный исследователь"\n Вы продемонстрировали уверенные знания в
        истории Отечества. Возможно, вы уже многое изучили, но всегда найдется что-то, что можно
        исследовать глубже. Ваш интерес к историческим событиям показывает, что у вас большой
        потенциал стать настоящим экспертом. Продолжайте развиваться в этом направлении!</string>

    <string name="perfect">"Знаток истории Отечества"\n Поздравляем! Вы продемонстрировали отличные
        знания в области истории Отечества. Ваши знания говорят о серьезном интересе к теме и,
        возможно, о долгих часах чтения и изучения исторических источников. Вы точно понимаете
        важность событий прошлого и их влияние на наше настоящее. Продолжайте в том же духе — вы
        настоящий исторический эксперт! </string>


</resources>